# python-polylith-example-theme-tdd

./: pyproject.toml  workspace.toml
components/logging/src/example/logging/: __init__.py
components/logging/test/example/logging/: test_core.py
