[project]
name = "python-polylith-example-theme-tdd"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "polylith-cli>=1.30.1",
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
dev-mode-dirs = ["components", "bases", "development", "."]

[tool.polylith.bricks]
"components/logging/src/example/logging" = "example/logging"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]